# timepix-data-crunching

./: CMakeLists.txt  LICENSE  README.md
src/: include.hh  main.cpp  tasks.hh
src/classes/: pixelhit.cpp  pixelhit.hh  structs.hh
src/tasks/: apply_calibration.cpp  apply_decalibration.cpp  apply_simple_calibration.cpp  bin_scale_data.cpp  bin_toa_ftoa.cpp  calibrate_tpx3.cpp  extract_pixet_abct.cpp  get_binary_toa.cpp  get_count.cpp  get_ftoa_xy.cpp  gnuplot-iostream.h
src/util/: base64.hh  fit_gauss.hh  split.hh  tot_keV_conversion.hh  transform.hh
